--- a/A2 pages/Day 1 Done/index.html
+++ b/A2 pages/Day 1 Done/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href=“./A1.html”>
+    <a href=“./website1/A2.html”>
         <button>text</button>
    </a>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
