--- a/Day 1.html
+++ b/Day 1.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <a href=“./website1/A2.html”>
+    
+    <a href=“A2.html”>
         <button>text</button>
    </a>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-    <script src="JAVA/sketch.js"></script>
+    <script src="A2 pages/Day 1 Done/JAVA/sketch.js"></script>
 </body>
 </html>
