--- a/A2.html
+++ b/A2.html
@@ -30,14 +30,14 @@
 
     <nav class="A2NAV">
         <ul>
-            <li><a href="./A2 pages/Day 1 Done/index.html">DAY 1</a></li>
-            <li><a href="./A2 pages/Day 2 Done/index.html">DAY 2</a></li>
-            <li><a href="./A2 pages/Day 3 Done/index.html">DAY 3</a></li>
-            <li><a href="./A2 pages/Day 4 Done/index.html">DAY 4</a></li>
-            <li><a href="./A2 pages/Day 5 Done/index.html">DAY 5</a></li>
-            <li><a href="./A2 pages/Day 6 Done/index.html">DAY 6</a></li>
-            <li><a href="./A2 pages/Day 7 Done/index.html">DAY 7</a></li>
-            <li><a href="./A2 pages/Day 8 Done/index.html">DAY 8</a></li>
+            <li><a href="./A2Day1.html">DAY 1</a></li>
+            <li><a href="./A2Day2.html">DAY 2</a></li>
+            <li><a href="./A2Day3.html">DAY 3</a></li>
+            <li><a href="./A2Day4.html">DAY 4</a></li>
+            <li><a href="./A2Day5.html">DAY 5</a></li>
+            <li><a href="./A2Day6.html">DAY 6</a></li>
+            <li><a href="./A2Day7.html">DAY 7</a></li>
+            <li><a href="./A2Day8.html">DAY 8</a></li>
             <li><a href="./A2 pages/Day 9 Done/index.html">DAY 9</a></li>
             <li><a href="./A2 pages/Day 10 Done/index.html">DAY 10</a></li>
             <li><a href="./A2 pages/Day 11 Done/index.html">DAY 11</a></li>
