--- a/A2Day1.html
+++ b/A2Day1.html
@@ -4,13 +4,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./resources/CSS/Styles.css">
 </head>
 <body>
-    
+    <!--Navbar Section-->
+    <nav class="navbar">
+        <ul>
+            <li><a class="blue" href="./Index.html">Home</a></li>
+            <li><a href="./A1.html">Assignment 1</a></li>
+            <li><a href="./A2.html">Assignment 2</a></li>
+            <li><a href="./A3.html">Assignment 3</a></li>
+            <li><a href="./readings.html">Readings</a></li>
+            <li><a href="./Contact.html">Contact Me</a></li>
+        </ul>
+    </nav> 
     <a href=“A2.html”>
         <button>text</button>
    </a>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-    <script src="A2 pages/Day 1 Done/JAVA/sketch.js"></script>
+    <script src="Java/Day1.js"></script>
 </body>
 </html>
