--- a/A2Day1.html
+++ b/A2Day1.html
@@ -17,11 +17,8 @@
             <li><a href="./readings.html">Readings</a></li>
             <li><a href="./Contact.html">Contact Me</a></li>
         </ul>
-    </nav> 
-    <a href=“A2.html”>
-        <button>text</button>
-   </a>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
+
+    <script src="java/p5.min.js"></script>
     <script src="Java/Day1.js"></script>
 </body>
 </html>
