--- a/A2.html
+++ b/A2.html
@@ -31,6 +31,7 @@
     <nav class="A2NAV">
         <ul>
             <li><a href="./A2Day1.html">DAY 1</a></li>
+            <img src="./resources/IMAGES/qr code.jpeg" alt="">
             <li><a href="./A2Day2.html">DAY 2</a></li>
             <li><a href="./A2Day3.html">DAY 3</a></li>
             <li><a href="./A2Day4.html">DAY 4</a></li>
@@ -38,19 +39,19 @@
             <li><a href="./A2Day6.html">DAY 6</a></li>
             <li><a href="./A2Day7.html">DAY 7</a></li>
             <li><a href="./A2Day8.html">DAY 8</a></li>
-            <li><a href="./A2 pages/Day 9 Done/index.html">DAY 9</a></li>
-            <li><a href="./A2 pages/Day 10 Done/index.html">DAY 10</a></li>
-            <li><a href="./A2 pages/Day 11 Done/index.html">DAY 11</a></li>
-            <li><a href="./A2 pages/Day 12 Done/index.html">DAY 12</a></li>
-            <li><a href="./A2 pages/Day 13 Done/index.html">DAY 13</a></li>
-            <li><a href="./A2 pages/Day 14 Done/index.html">DAY 14</a></li>
-            <li><a href="./A2 pages/Day 15 Done/index.html">DAY 15</a></li>
-            <li><a href="./A2 pages/Day 16 Done/index.html">DAY 16</a></li>
-            <li><a href="./A2 pages/Day 17 Done/index.html">DAY 17</a></li>
-            <li><a href="./A2 pages/Day 18 Done/index.html">DAY 18</a></li>
-            <li><a href="./A2 pages/Day 19 Done/index.html">DAY 19</a></li>
-            <li><a href="./A2 pages/Day 20 Done/index.html">DAY 20</a></li>
-            <li><a href="./A2 pages/Day 21 Done/index.html">DAY 21</a></li>
+            <li><a href="./A2Day9.html">DAY 9</a></li>
+            <li><a href="./A2Day10.html">DAY 10</a></li>
+            <li><a href="./A2Day11.html">DAY 11</a></li>
+            <li><a href="./A2Day12.html">DAY 12</a></li>
+            <li><a href="./A2Day13.html">DAY 13</a></li>
+            <li><a href="./A2Day14.html">DAY 14</a></li>
+            <li><a href="./A2Day15.html">DAY 15</a></li>
+            <li><a href="./A2Day16.html">DAY 16</a></li>
+            <li><a href="./A2Day17.html">DAY 17</a></li>
+            <li><a href="./A2Day18.html">DAY 18</a></li>
+            <li><a href="./A2Day19.html">DAY 19</a></li>
+            <li><a href="./A2Day20.html">DAY 20</a></li>
+            <li><a href="./A2Day21.html">DAY 21</a></li>
 
         </ul>
     </nav>
