--- a/A2Day2.html
+++ b/A2Day2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
+    <script src="java/p5.min.js"></script>
     <script src="Java/sketch.js"></script>
 </body>
 </html>
