--- a/A2Day3.html
+++ b/A2Day3.html
@@ -8,7 +8,7 @@
 <body>
  
     
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
+    <script src="java/p5.min.js"></script>
     <script src="Java/sketcj.js"></script>
 </body>
 </html>
