--- a/index.html
+++ b/index.html
@@ -4,48 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - First Website</title>
-    <link rel="stylesheet" href="./resources/CSS/Styles.css">
+    <title>Assignment 1 - First Website</title>
+    <link rel="stylesheet" href="./Styles.css">
 </head>
 <body>
     <!--Navbar Section-->
     <nav class="navbar">
         <ul>
-            <li><a class="blue" href="./Index.html">Home</a></li>
-            <li><a href="./A1.html">Assignment 1</a></li>
-            <li><a href="./A2.html">Assignment 2</a></li>
-            <li><a href="./A3.html">Assignment 3</a></li>
-            <li><a href="./readings.html">Readings</a></li>
-            <li><a href="./Contact.html">Contact Me</a></li>
+            <li><a class="blue" href="./index.html">Home</a></li>
+            <li><a href="./index.html">Assignment 1</a></li>
+            <li><a href="./index.html">Assignment 2</a></li>
+            <li><a href="./index.html">Assignment 3</a></li>
+            <li><a href="./index.html">Readings</a></li>
+            <li><a href="./index.html">Contact Me</a></li>
         </ul>
     </nav>
 
     <!--Banner Section-->
     <div class="banner">
-        <h1>Welcome to Suvanna's First Website</h1>
-        <img id="just-me-home" src="./resources/IMAGES/just me.JPG" alt="">
-        <p>My experimenting of everything code. Im trying here so please don't judge me.</p>
-        <button>Follow me on instagram</button>
+        <h1>Assignment 1: Confounding Tools</h1>
+        <img id="assignment1" src="./IMAGES/shopping spree.jpg" alt="">
+        <p>
+            We had the choice to design a 24” x 36” digital poster about either one of the following:
+            <p>1) your life under COVID 19</p>
+            <p>2) how you see the future of design</p> 
+            <p>*without using software explicitly intended for design.*</p>
+            
+            In this assignment you will see all my spending habits during covid. It is quite embarassing to show and it will definetly show that I possibly have a shopping problem. Throughtout this exploration you will have full access to all my spending habits and bills during the pandemic.
+        </p>
+    </div>
+
+    <div class="banner">
+        <h1>Just some process of what was added into the final</h1>
+        <img id="images-fit" src="./IMAGES/Screen Shot 2022-05-06 at 4.36.19 AM.png" alt="">
+        <p>
+            For this I used an inconventional tool to make a collage on Excel to be more specific I did it on google sheets which gives me less acess and features than Excel. As I used the program I realized it is qute resstricted and dose not give me much options. But I did utilize the graph tool to make me several different looking graphs to be added into the collage. 
+        </p>
+    </div>
+
+    <div class="banner">
+        <h1>Just some process of what was added into the final</h1>
+        <p>This is a majority of what I found regardign all the purchases made durign peek pandemic. Many of them were impulse buys as it was for my hobbies and gifts, but some more more reasonable like food and etc. You can see all my buys thats could or could not be justified, but it did make my pendemic enjoyable.</p>
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_02.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_03.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_04.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_05.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_06.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_07.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_08.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_09.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_10.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_11.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_12.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_13.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_14.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_15.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_16.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_17.jpg" alt="">
+        <p>
+            In this assignment you will see all my spending habits during covid. It is quite embarassing to show and it will definetly show that I possibly have a shopping problem. 
+        </p>
     </div>
 
     <!--idk section-->
     <div class="home-section">
-        <span class="bold" id="home-page">My Experimental Phase</span>
-        <p>Just me fooling around on code... hahaha... Don't come for me...</p>
-        <form action="">
+        <span class="bold" id="home-page">A Little About My Work</span>
+        <p>The main point of this assignment was to use uncoventional tech to make a poster about whats Covid has been like.</p>
+       <!-- <form action="">
             <input type="text">
             <input type="submit" value="Submit">
-        </form>
+        </form> -->
         <div id="greets">
             <ul>
                 <li>
-                    <div class="avatar"></div><span>Soooooooo..... That's me! ^^^ !!!!</span>
-                </li>
-                <li>
-                    <div class="avatar"></div><span>I don't know anything about coding!</span>
-                </li>
-                <li>
-                    <div class="avatar"></div><span>But here is my attempt in trying!! Sorry in advance if this is comes out bad!</span>
+                    <div class="avatar"></div><span>My intentions if this assignment was to show my spending habits in this. I had attached several images to provide loads of shopping and purchese I have made even with credit card statements.</span>
                 </li>
             </ul>
         </div>
@@ -53,8 +85,6 @@
 
     <script src="./java.js"> 
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-    <script src="JAVA/sketch.js"></script>
 
 </body>
 </html>
