--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <h1>Welcome to Suvanna's First Website</h1>
         <img id="just-me-home" src="./resources/IMAGES/just me.JPG" alt="">
         <p>My experimenting of everything code. Im trying here so please don't judge me.</p>
-        <button>Follow me on instagram</button>
     </div>
 
     <!--idk section-->
@@ -36,13 +35,13 @@
         <div id="greets">
             <ul>
                 <li>
-                    <div class="avatar"></div><span>Soooooooo..... That's me! ^^^ !!!!</span>
+                    <div></div><span>Soooooooo..... That's me! ^^^ !!!!</span>
                 </li>
                 <li>
-                    <div class="avatar"></div><span>I don't know anything about coding!</span>
+                    <div></div><span>I don't know anything about coding!</span>
                 </li>
                 <li>
-                    <div class="avatar"></div><span>But here is my attempt in trying!! Sorry in advance if this is comes out bad!</span>
+                    <div></div><span>But here is my attempt in trying!! Sorry in advance if this is comes out bad!</span>
                 </li>
             </ul>
         </div>
