--- a/A2Day10.html
+++ b/A2Day10.html
@@ -4,11 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./resources/CSS/Styles.css">
 </head>
 <body>
+    <!--Navbar Section-->
+    <nav class="navbar">
+        <ul>
+            <li><a class="blue" href="./index.html">Home</a></li>
+            <li><a href="./A1.html">Assignment 1</a></li>
+            <li><a href="./A2.html">Assignment 2</a></li>
+            <li><a href="./A3.html">Assignment 3</a></li>
+            <li><a href="./readings.html">Readings</a></li>
+            <li><a href="./Contact.html">Contact Me</a></li>
+        </ul>
 
-    <script src="java/p5.min.js"> </script>
-    <script src="java/sketch.js"> </script>
-    
+    <script src="java/p5.min.js"></script>
+    <script src="Java/Day10.js"></script>
 </body>
 </html>
