--- a/A1.html
+++ b/A1.html
@@ -20,41 +20,47 @@
         </ul>
     </nav>
 
-    <!--Banner Section-->
-    <div class="banner">
-        <h1>Assignment 1</h1>
-        <img id="assignment1" src="./resources/IMAGES/shopping spree.jpg" alt="">
+     <!--Banner Section-->
+     <div class="banner">
+        <h1>Assignment 1: Confounding Tools</h1>
+        <img id="assignment1" src="./IMAGES/shopping spree.jpg" alt="">
         <p>
-            In this assignment you will see all my spending habits during covid. It is quite embarassing to show and it will definetly show that i possibly have a shopping problem. 
+            We had the choice to design a 24” x 36” digital poster about either one of the following:
+            <p>1) your life under COVID 19</p>
+            <p>2) how you see the future of design</p> 
+            <p>*without using software explicitly intended for design.*</p>
+            
+            In this assignment you will see all my spending habits during covid. It is quite embarassing to show and it will definetly show that I possibly have a shopping problem. Throughtout this exploration you will have full access to all my spending habits and bills during the pandemic.
         </p>
     </div>
 
     <div class="banner">
         <h1>Just some process of what was added into the final</h1>
-        <img id="images-fit" src="./resources/IMAGES/Screen Shot 2022-05-06 at 4.36.19 AM.png" alt="">
+        <img id="images-fit" src="./IMAGES/Screen Shot 2022-05-06 at 4.36.19 AM.png" alt="">
         <p>
-            In this assignment you will see all my spending habits during covid. It is quite embarassing to show and it will definetly show that I possibly have a shopping problem. 
+            For this I used an inconventional tool to make a collage on Excel to be more specific I did it on google sheets which gives me less acess and features than Excel. As I used the program I realized it is qute resstricted and dose not give me much options. But I did utilize the graph tool to make me several different looking graphs to be added into the collage. 
         </p>
     </div>
 
     <div class="banner">
         <h1>Just some process of what was added into the final</h1>
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_02.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_03.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_04.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_05.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_06.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_07.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_08.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_09.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_10.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_11.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_12.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_13.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_14.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_15.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_16.jpg" alt="">
-        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_17.jpg" alt="">
+        <p>This is a majority of what I found regardign all the purchases made durign peek pandemic. Many of them were impulse buys as it was for my hobbies and gifts, but some more more reasonable like food and etc. You can see all my buys thats could or could not be justified, but it did make my pendemic enjoyable.</p>
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_02.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_03.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_04.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_05.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_06.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_07.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_08.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_09.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_10.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_11.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_12.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_13.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_14.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_15.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_16.jpg" alt="">
+        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_17.jpg" alt="">
         <p>
             In this assignment you will see all my spending habits during covid. It is quite embarassing to show and it will definetly show that I possibly have a shopping problem. 
         </p>
@@ -71,7 +77,7 @@
         <div id="greets">
             <ul>
                 <li>
-                    <div class="avatar"></div><span>My intentions if this assignment was to show my spendign habits in this. I had attached several images to provide loads of shopping and purchese i have made even with credit card statements.</span>
+                    <div class="avatar"></div><span>My intentions if this assignment was to show my spending habits in this. I had attached several images to provide loads of shopping and purchese I have made even with credit card statements.</span>
                 </li>
             </ul>
         </div>
