--- a/A1.html
+++ b/A1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1 - First Website</title>
+    <title>Assignment 1: Confounding Tools</title>
     <link rel="stylesheet" href="./resources/CSS/Styles.css">
 </head>
 <body>
