--- a/A1.html
+++ b/A1.html
@@ -23,7 +23,7 @@
      <!--Banner Section-->
      <div class="banner">
         <h1>Assignment 1: Confounding Tools</h1>
-        <img id="assignment1" src="./IMAGES/shopping spree.jpg" alt="">
+        <img id="assignment1" src="./resources/IMAGES/shopping spree.jpg" alt="">
         <p>
             We had the choice to design a 24” x 36” digital poster about either one of the following:
             <p>1) your life under COVID 19</p>
@@ -45,22 +45,22 @@
     <div class="banner">
         <h1>Just some process of what was added into the final</h1>
         <p>This is a majority of what I found regardign all the purchases made durign peek pandemic. Many of them were impulse buys as it was for my hobbies and gifts, but some more more reasonable like food and etc. You can see all my buys thats could or could not be justified, but it did make my pendemic enjoyable.</p>
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_02.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_03.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_04.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_05.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_06.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_07.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_08.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_09.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_10.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_11.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_12.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_13.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_14.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_15.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_16.jpg" alt="">
-        <img id="letter-size" src="./IMAGES/A1-Progress Book_Page_17.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_02.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_03.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_04.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_05.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_06.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_07.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_08.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_09.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_10.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_11.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_12.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_13.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_14.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_15.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_16.jpg" alt="">
+        <img id="letter-size" src="./resources/IMAGES/A1-Progress Book_Page_17.jpg" alt="">
         <p>
             In this assignment you will see all my spending habits during covid. It is quite embarassing to show and it will definetly show that I possibly have a shopping problem. 
         </p>
