--- a/A1.html
+++ b/A1.html
@@ -36,7 +36,7 @@
 
     <div class="banner">
         <h1>Just some process of what was added into the final</h1>
-        <img id="images-fit" src="./IMAGES/Screen Shot 2022-05-06 at 4.36.19 AM.png" alt="">
+        <img id="images-fit" src="./resources/IMAGES/Screen Shot 2022-05-06 at 4.36.19 AM.png" alt="">
         <p>
             For this I used an inconventional tool to make a collage on Excel to be more specific I did it on google sheets which gives me less acess and features than Excel. As I used the program I realized it is qute resstricted and dose not give me much options. But I did utilize the graph tool to make me several different looking graphs to be added into the collage. 
         </p>
